--- a/html/mediawiki.html
+++ b/html/mediawiki.html
@@ -21,7 +21,7 @@
 <div class="orbitron">File Management</div>
 <div class="m24">
         <p>
-                The parsing orchestration also calls a image-manager function that gets all the images from the parsed page and downloads any files that are missing from the local disk. Images that fail to download are logged to a file as a last resort. After stabilizing the script, most failures happen because the files don't exist on the live server. The <em>mass image downloader</em> script  uses the same process because its code was derived from this image-manager function.
+                The parsing orchestration also calls a image-manager function that gets all the images from the parsed page and downloads any files that are missing from the local disk. Images that fail to download are logged to a file as a last resort. After stabilizing the script, most failures happen because the files don't exist on the live server. The <em>mass image downloader</em> script  uses the same process because its code was derived from this image-manager function. The function took weeks of refactoring for it to reach its final state.
         </p>
         <p> The process in which the image-manager function operates:</p>
         <ul>
