--- a/html/summary.html
+++ b/html/summary.html
@@ -7,10 +7,10 @@
         <p>In finality, the library's handling of data is responsible for:</p>
         
         <ul>
-                <li>Respectfully caring for cultural history through digital stewardship. </li>
-                <li>Formatting information for viewing that is most data-immediate and comfortable.</li>
-                <li>Make each dataset or in-house application have greater potential as a resource for learning under any use case.</li>
+                <li>Making information be more known and available.</li>
+                <li>Respectfully caring for cultural history through digital stewardship.</li>
                 <li>Updating the library's collection over time with new datasets.</li>
-                <li>Having everything available for anyone to access so that the power of knowledge is shared at scale.</li>
+                <li>Formatting information for viewing that is most data-immediate and comfortable.</li>
+                <li>Making each dataset or in-house application have greater potential as a resource for learning under any use case.</li>              
         </ul>
 </div>
