--- a/html/userinterface.html
+++ b/html/userinterface.html
@@ -18,6 +18,9 @@
                <p> In a 2 panel structure, the bottom 3rd panel is omitted and only the top two panels are rendered. Mediawiki implementations are like this because the left column renders the <em>table of contents</em> navigation, while the right panel renders page and category results.</p>
                 
                 <p>2 panel structure for unique implementations are fundamentally the same. If all filters and category-links fit into the left column, the right panel can then be used for results instead of category-links.</p>
+
+                <p>In recent developments, the 2 panel structure's right panel in some implementations have tabs that determine which contents of the panel are to be displayed. This effectively removes the need for the 3rd panel since category links and results can be separated into separate tabs. 
+                        This eliminates vertical document scrolling and keeps all content within view at all times since both the left and right panel each have their own scrollbars which normalize both panels to the same height.</p>
         </div>
 </div>
 <div class="orbitron">Themes</div>
