--- a/html/dataondisplay.html
+++ b/html/dataondisplay.html
@@ -1,10 +1,19 @@
-<p>
+<div class="orbitron">More Data At Once</div>
+<div class="m24">
         The library serves query results that are optimized for <em>data-immediacy</em>, exposing all data directly within the results page. Without the need for a full-details page, this eliminates back-and-forth page traversal. 
         The exposure of all records  provides an opportunity for curiosity to glance over at other records meangingfully. Every dataset so far benefits from this manner of data presentation. Long text is collapsed into description containers with <em>show-more</em> toggles. The results of the data appear as reasonable article space, usually containing a thumbnail of 300 pixel width to the left with meta-data printed to the right in a two panel element which either occupies its own row or is limited in width to act as a card which can hold a few per line depending on the user's chosen application display width. 
-</p>
-<p>
+</div>
+
+<div class="orbitron">Pagination</div>
+<div class="m24">
+        <p>
         Every dataset uses pagination. The page limit is curated for each implementation based on the average html output length of a query. Art museums mostly show 20 records per query due to their meta-data and thumbnail richness. Implementations with less meta-data output will show a higher number of records. Pagination creates tunable  results, which resolves any issues of data over-abundance. Deep paging inefficiencies are addressed with a hybrid method method which uses both keyset and offset pagination.
 </p>
-<p>
-        When any opportunity arises, creators of the contemporary records are represented directly in the data presentation. 
-</p>
+</div>
+
+<div class="orbitron">Pagination</div>
+<div class="m24">
+        <p>
+                When any opportunity arises, creators of the contemporary records are represented directly in the data presentation. 
+        </p>
+</div>
