--- a/html/dataondisplay.html
+++ b/html/dataondisplay.html
@@ -11,9 +11,9 @@
 </p>
 </div>
 
-<div class="orbitron">Pagination</div>
+<div class="orbitron">Creator Representation</div>
 <div class="m24">
         <p>
-                When any opportunity arises, creators of the contemporary records are represented directly in the data presentation. 
+                When any opportunity arises, creators of contemporary records are represented directly in the presentation of data. Their user-names and profile pages are outputted to accompany any applicable source page that links to the original record. Giphy provides this opportunity because they accepted Internet Public Library as a verified application, which lifts their rate limiting while also not restricting application design. Every other image hosting API such as Unsplash and Pixabay do not allow the creation of applications which resemble media searches. This prevents access to their API entirely, which also prevents the ability to do what Giphy allows, which is represent contemporary artists through the meta-data. The ability to represent a contemporary creator in such a way is rare for this reason.
         </p>
 </div>
