--- a/html/dataondisplay.html
+++ b/html/dataondisplay.html
@@ -15,7 +15,7 @@
 
 <div class="orbitron">Lazy Loading</div>
 <div class="m24">
-        Lazing loading of images at the library is primarily for respecting online traffic. It was forced into creation when viewing <em>The Smithsonian Field Book Project</em>, which is a department from The Smithsonian that has dozens of thumbnails per record. Even with a 20 record limit per page, the amount of thumbnails forced rate-limiting from the image server against the IP address in which data was being received. Deferring the loading based on viewing proximity solved the issue and lazy loading has since been implemented and refactored into nearly every dataset.
+        Lazing loading of images at the library is primarily for respecting online traffic. It was forced into creation when viewing <em>The Smithsonian Field Book Project</em>, which is a department from The Smithsonian that has dozens of thumbnails per record. Even with a 20 record limit per page, the amount of thumbnails forced rate-limiting from the image server (IDS) against the IP-address in which data was being received. Deferring the loading based on viewing proximity solved the issue and lazy loading has since been implemented and refactored into nearly every dataset.
 </div>
 
 <div class="orbitron">Creator Representation</div>
