--- a/html/dataondisplay.html
+++ b/html/dataondisplay.html
@@ -2,7 +2,8 @@
 
 <div class="orbitron">More Data At Once</div>
 <div class="m24">
-        The library serves query results that are optimized for <em>data-immediacy</em>, exposing all data directly within the results page. Without the need for a full-details page, this eliminates back-and-forth page traversal. 
+        <Q></Q>uery results that are optimized for <em>data-immediacy</em>, exposing all data directly within the results page. This eliminates back-and-forth page traversal by minimizing the need to use a full-details page. 
+
         The exposure of all records  provides an opportunity for curiosity to glance over at other records meangingfully. Every dataset so far benefits from this manner of data presentation. Long text is collapsed into description containers with <em>show-more</em> toggles. The results of the data appear as reasonable article space, usually containing a thumbnail of 300 pixel width to the left with meta-data printed to the right in a two panel element which either occupies its own row or is limited in width to act as a card which can hold a few per line depending on the user's chosen application display width. 
 </div>
 
@@ -15,12 +16,12 @@
 
 <div class="orbitron">Lazy Loading</div>
 <div class="m24">
-        Lazing loading of images at the library is primarily for respecting online traffic. It was forced into creation when viewing <em>The Smithsonian Field Book Project</em>, which is a department from The Smithsonian that has dozens of thumbnails per record. Even with a 20 record limit per page, the amount of thumbnails forced rate-limiting from the image server (IDS) against the IP-address in which data was being received. Deferring the loading based on viewing proximity solved the issue and lazy loading has since been implemented and refactored into nearly every dataset.
+        Lazing loading of images at the library is primarily for respecting online traffic. It was forced into creation when viewing <em>The Smithsonian Field Book Project</em>, which is a department from The Smithsonian that has dozens of thumbnails per record. Even with a 20 record limit per page, the amount of thumbnails forced rate-limiting from the image server (IDS) against the IP-address in which data was being received. Deferring the loading based on viewing proximity solved the issue and lazy loading has since been implemented into nearly every dataset.
 </div>
 
 <div class="orbitron">Creator Representation</div>
 <div class="m24">
         <p>
-                When any opportunity arises, creators of contemporary records are represented directly in the presentation of data. Their user-names and profile pages are outputted to accompany any applicable source page that links to the original record. Giphy is an API that provides this opportunity because they accepted Internet Public Library as a verified application, which lifts their rate limiting while also not restricting application design. Every other image hosting API such as Unsplash and Pixabay do not allow the creation of applications which resemble media searches. This prevents access to their API entirely, which also prevents the ability to do what Giphy allows, which is represent contemporary artists through the meta-data. The ability to represent a contemporary creator in such a way is rare for this reason.
+                When any opportunity arises, creators of contemporary records are represented directly in the presentation of data. Their user-names and profile pages are outputted to accompany any applicable source page that links to the original record. Giphy is an API that provides this opportunity because they accepted Internet Public Library as a verified application, which lifts their rate limiting while also not restricting application design. Every other image hosting API such as Unsplash and Pixabay do not allow the creation of applications which resemble media searches. This prevents access to their APIs for what the library is intending to use data for. The ability to represent a contemporary creator in such a way is rare for this reason.
         </p>
 </div>
