--- a/html/ingestion.html
+++ b/html/ingestion.html
@@ -1,7 +1,7 @@
 <div class="orbitron">Ingestion</div>
 <div class="m24">
         <p>
-                Ingestion of datasets is a regular job. At times, half of the threads from the CPU are running ingestion scripts in concurrency. Some datasets takes minutes, hours, or days to ingest. Few take months. Ingestion scripts are written with respect for all rate-limits. 
+                Ingestion of datasets is a regular job. At times, half of the threads from the CPU are running ingestion scripts in concurrency. Some datasets takes minutes, hours, or days to ingest. Few take months, such as the Library of Congress. Ingestion scripts are written with respect for all rate-limits. 
                 In the case of missing data from earlier, less experienced ingestions, a new script is written in order to map the full data, and the ingestion is restarted from the first record.
         </p>
         <p>The general flow of dataset ingestion from an API to local disk:</p>
@@ -20,7 +20,7 @@
 </div>
 <div class="orbitron">Ingestion Failure</div>
 <div class="m24">
-        Even if a dataset is cleared for implementation during the curation process, the ingestion process for said dataset may be too taxing. An example of a dataset likely to fail during ingestion would be a Mediawiki dataset which relies on too many Mediawiki extensions, which leads to conflict with the custom-parser that determines the final html output.
+        Even if a dataset is cleared for implementation during the curation process, the ingestion process for said dataset may be too taxing. An example of a dataset likely to fail during ingestion would be a Mediawiki dataset that relies on too many Mediawiki extensions, which leads to conflict with the custom-parser that determines the final html output.
 </div>
 <div class="orbitron">Synchronization</div>
 <div class="m24">
