--- a/html/dataondisplay.html
+++ b/html/dataondisplay.html
@@ -2,26 +2,26 @@
 
 <div class="orbitron">More Data At Once</div>
 <div class="m24">
-        <Q></Q>uery results that are optimized for <em>data-immediacy</em>, exposing all data directly within the results page. This eliminates back-and-forth page traversal by minimizing the need to use a full-details page. 
+        <p>
+                The library organizes each implementation's navigation options in the user-interface as a map to everything. Table of Contents, content filters, and category links all assist in guiding the user through the whole dataset.
+        </p>
+        <p>Query results are optimized for <em>data-immediacy</em>, exposing all data directly within the results page. This eliminates back-and-forth page traversal by eliminating the full-details page.</p>
 
-        The exposure of all records  provides an opportunity for curiosity to glance over at other records meangingfully. Every dataset so far benefits from this manner of data presentation. Long text is collapsed into description containers with <em>show-more</em> toggles. The results of the data appear as reasonable article space, usually containing a thumbnail of 300 pixel width to the left with meta-data printed to the right in a two panel element which either occupies its own row or is limited in width to act as a card which can hold a few per line depending on the user's chosen application display width. 
+        <p>The exposure of full-data on every record in view is as functional as it is aesthetic. The content volume occupies comfortable amounts of space, while the data is made readably dense, like that of Japanese product packaging.  </p>
+        <p>
+                Vertical spacing is carefully maintained with various content collapsing methods. Long text is collapsed into description containers with <em>show-more</em> toggles. Panels are tabbed in order to alter context within the same space, which both introduces and relieves layout shifting.
+        </p>
 </div>
 
 <div class="orbitron">Pagination</div>
 <div class="m24">
         <p>
-        Every dataset uses pagination. The page limit is curated for each implementation based on the average html output length of a query. Art museums mostly show 20 records per query due to their meta-data and thumbnail richness. Implementations with less meta-data output will show a higher number of records. Pagination creates tunable  results, which resolves any issues of data over-abundance. Deep paging inefficiencies are addressed with a hybrid method method which uses both keyset and offset pagination.
+        The library uses offset pagination for smaller datasets. For deep paging, both keyset and offset pagination are used together. The page-limit is curated for each implementation based on the average html output length of a query. Art museums mostly show 20 records per query due to their meta-data and thumbnail richness. Implementations with less meta-data output will show a higher number of records.
 </p>
 </div>
 
 <div class="orbitron">Lazy Loading</div>
 <div class="m24">
-        Lazing loading of images at the library is primarily for respecting online traffic. It was forced into creation when viewing <em>The Smithsonian Field Book Project</em>, which is a department from The Smithsonian that has dozens of thumbnails per record. Even with a 20 record limit per page, the amount of thumbnails forced rate-limiting from the image server (IDS) against the IP-address in which data was being received. Deferring the loading based on viewing proximity solved the issue and lazy loading has since been implemented into nearly every dataset.
+        Lazy loading of images at the library is primarily for respecting online traffic. It was forced into creation when viewing <em>The Smithsonian Field Book Project</em>, which is a department from The Smithsonian that has dozens of thumbnails per record. Even with a 20 record limit per page, the amount of thumbnails forced rate-limiting from the image server (IDS) against the IP-address in which data was being received. Deferring the loading based on viewing proximity solved the issue and lazy loading has since been implemented into nearly every dataset.
 </div>
 
-<div class="orbitron">Creator Representation</div>
-<div class="m24">
-        <p>
-                When any opportunity arises, creators of contemporary records are represented directly in the presentation of data. Their user-names and profile pages are outputted to accompany any applicable source page that links to the original record. Giphy is an API that provides this opportunity because they accepted Internet Public Library as a verified application, which lifts their rate limiting while also not restricting application design. Every other image hosting API such as Unsplash and Pixabay do not allow the creation of applications which resemble media searches. This prevents access to their APIs for what the library is intending to use data for. The ability to represent a contemporary creator in such a way is rare for this reason.
-        </p>
-</div>
