--- a/html/ingestion.html
+++ b/html/ingestion.html
@@ -20,14 +20,14 @@
 </div>
 <div class="orbitron">Ingestion Failure</div>
 <div class="m24">
-        Even if a dataset is cleared for implementation during the curation process, the ingestion process for said dataset may be too taxing. An example of a dataset likely to fail during ingestion would be a Mediawiki dataset that relies on too many Mediawiki extensions, which leads to conflict with the custom-parser that determines the final html output.
+        Even if a dataset is cleared for implementation, the ingestion process may end up taxing. An example of a dataset likely to fail during ingestion would be a Mediawiki dataset that relies on too many Mediawiki extensions, which leads to conflict with the custom-parser that determines the final html output.
 </div>
 <div class="orbitron">Synchronization</div>
 <div class="m24">
         <p>
                 The library has an administrative synchronization page in the front-end which polls a log file for progress while the CLI is running a job. 
-                Every implementation that is capable of data-synchronization is listed as a toggle button which is used to determine what CLI script is to be ran.
-                There are currently no automation tools for synchronization such as cron jobs since every sync job as of yet still requires being present for debugging.
+                Every implementation that is capable of data-synchronization is listed as a toggle button that is used to determine what CLI script is to be ran.
+                There are currently no automation tools for synchronization such as cron jobs since some sync jobs still require being present for debugging.
         </p>
         <p>A php synchronization script for datasets from APIs is ideally a rewritten version of the ingestion script that automatically inserts new records into the database or updates them directly instead of saving them as JSON files. </p>
         <p>
