--- a/html/dataondisplay.html
+++ b/html/dataondisplay.html
@@ -9,7 +9,7 @@
 
         <p>The exposure of full-data on every record in view is as functional as it is aesthetic. The content volume occupies comfortable amounts of space, while the data is made readably dense, like that of Japanese product packaging.  </p>
         <p>
-                Vertical spacing is carefully maintained with various content collapsing methods. Long text is collapsed into description containers with <em>show-more</em> toggles. Panels are tabbed in order to alter context within the same space, which both introduces and relieves layout shifting.
+                Full-data output runs the risk of data-overabundance. Vertical spacing is maintained with various content collapsing methods. Long text is collapsed into description containers with <em>show-more</em> toggles. Panels are tabbed in order to alter context within the same space, which both introduces and relieves layout shifting.
         </p>
 </div>
 
