--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                 <div class="flexrow"><a href="javascript:void(0)" class="nounderline" data="architecture">Architecture</a></div>
                                 <div class="flexrow"><a href="javascript:void(0)" class="nounderline" data="ingestion">Ingestion / Synchronization</a></div>
                                 <div class="flexrow"><a href="javascript:void(0)" class="nounderline" data="userinterface">User-Interface</a></div>
-                                <div class="flexrow"><a href="javascript:void(0)" class="nounderline" data="dataondisplay">Data On Display</a></div>
+                                <div class="flexrow"><a href="javascript:void(0)" class="nounderline" data="dataondisplay">Data Display</a></div>
                                 <div class="flexrow"><a href="javascript:void(0)" class="nounderline" data="mediawiki">Mediawiki</a></div>
                                 <div class="flexrow"><a href="javascript:void(0)" class="nounderline" data="technologies">Technologies</a></div>
                         </div>
