--- a/html/dataondisplay.html
+++ b/html/dataondisplay.html
@@ -25,3 +25,17 @@
         Lazy loading of images at the library is primarily for respecting online traffic. It was forced into creation when viewing <em>The Smithsonian Field Book Project</em>, which is a department from The Smithsonian that has dozens of thumbnails per record. Even with a 20 record limit per page, the amount of thumbnails forced rate-limiting from the image server (IDS) against the IP-address in which data was being received. Deferring the loading based on viewing proximity solved the issue and lazy loading has since been implemented into nearly every dataset.
 </div>
 
+<div class="orbitron">Earliest Filter</div>
+<div class="m24">
+        Commercial data from the likes of AniList (anime data) and IGDB (video games data) at their establishments usually reinforce new or upcoming records. The library is concerned with that as well as historical records. There are usually always  filters for popular, latest, or upcoming, although there is never one for earliest records. The <em>earliest</em> filter transforms a dataset from one which caters to consumers, into one that is an act of stewardship for the sake of onlookers viewing information under any context. It is critical despite being so innocuous.
+</div>
+
+<div class="orbitron">Trusting People / No Analytics</div>
+
+<div class="m24">
+        <p>The library is developed for both progression of function and aesthetic. The library trusts that people will be able to benefit from such progression. This is generally not the case for how the business world handles its customers, where they attempt to get a grip on perceived familiarity through metrics.
+        The library gathers data for people, not on people, therefore all brain-power and effort is kept in focus. Scripts such as Google Analytics are not acceptable. </p>
+        <p>
+                <em>Data-immediacy</em> and design with graphical personality are but a few things that break tradition at the library. It however, does not go out of the way to be different. Foundational design is still respected, and pushing for utmost-simplicity is immutable. Its the little things that need change, and rather than highlighting such changes publicly as if it were a shiny feature to look forward to or turn away out of fear or curiosity, everything is just there. Nobody needs to know that full-view page design was eliminated so that it streamlines the browsing experience by x, where x is the number of records in the query. It only needs to be an experience that is developed because people are definitely more capable of taking on more than what metrics give them credit for. Everything in the world suffers through this modern-day, metric induced software development environment for this reason, and the library does not follow suit.
+        </p>
+</div>
