--- a/html/ingestion.html
+++ b/html/ingestion.html
@@ -27,7 +27,7 @@
         <p>
                 The library has an administrative synchronization page in the front-end which polls a log file for progress while the CLI is running a job. 
                 Every implementation that is capable of data-synchronization is listed as a toggle button that is used to determine what CLI script is to be ran.
-                There are currently no automation tools for synchronization such as cron jobs since some sync jobs still require being present for debugging.
+                There are currently no automation tools for synchronization such as cron jobs since some sync jobs still require being present for debugging of things such as invalid column lengths and data mismatches.
         </p>
         <p>A php synchronization script for datasets from APIs is ideally a rewritten version of the ingestion script that automatically inserts new records into the database or updates them directly instead of saving them as JSON files. </p>
         <p>
