--- a/html/implementationconsiderations.html
+++ b/html/implementationconsiderations.html
@@ -10,3 +10,9 @@
                A case for development which requires careful consideration due to workload implications is the repurposing of established systems. Any system which contains open-data that is as abundant as Mediawiki is deserving of development. Developing of new systems has been and still could remain a part of implementation work. With the amount of data still on the horizon however, it is fruitful to resume the acquisition of external datasets.
         </p>    
 </div>
+<div class="orbitron">Mirroring</div>
+<div class="m24">
+        <p>
+                Mirroring has been limited and careful due to hardware limitations, although a full mirror of an API is beneficial even in the case of assisting institutions. On December 27th, 2025, Harvard experienced an issue with their image delivery service due to a Chrome update. From this it was decided that it would be safe(r) to mirror the images as well. Since the library has a full mirror of the Harvard API, it can serve as a fallback research site.
+        </p> 
+</div>
